sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
for (i<-0 to length-1){
	if (plusPetit(i:Int, j:Int):Boolean){
	return echange(i:Int, j:Int)
}
}
}

